# louisalbanziko.com

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.zig  build.zig.zon  cmark.zig  config.yaml.default  config.zon
mods/: cmark.zig  common.zig
mods/demo/: db.zig
src/: main.rs
www/: index.zig
www/about/: index.html.template  index.zig
www/blog/: article.html.ignore  article.html.template  article.zig  home.html.ignore  home.html.template  home.zig  index.zig
www/blog/md/: SSH_Agent_with_Systemd.md  Syncthing_on_No_GUI_Machine.md.priv
www/css/: classes.css  common  common.css  markdown.css  tags  tags.css  themes.css
www/css/themes/: dark  dark.css
www/demo/chat/: index.zig
www/demo/home/: index.html.template  index.zig
www/demo/login/: index.html.template  index.zig
www/demo/signup/: index.html.template  index.zig
www/home/: github-mark-white.xml  index.html.ignore  index.html.template  index.zig
www/js/: markdown.js
www/projects/: index.html.ignore  index.zig
www/projects/c_log/: 404.html  ch1_getting_started.html  ch2_functions.html  ch3_log_levels.html  index.html  print.html  searchindex.js  searchindex.json
www/projects/c_log/functions/: CL_LOGGER_CREATE.html  CL_LOGGER_DESTROY.html  CL_LOG_.html  CL_LOG_LVL_GET.html  CL_LOG_LVL_SET.html
