[package]
name = "https_louisalbanziko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.196", features = ["derive"] }
tide = "0.16.0"
tide-rustls = "0.3.0"

